--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -4,7 +4,7 @@ on:
     types: [closed,reopened]
   push:
     branches:
-      - release/2023.0.0-M4
+      - release/2023.0.0-RC1
   workflow_dispatch:
 jobs:
   release_notes:
