--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,48 +14,48 @@
     },
     {
       "matchPackagePatterns": [
-        "^org\\.codehaus\\.groovy"
+        "^org\\.apache\\.groovy"
       ],
       "groupName": "groovy monorepo"
     },
     {
       "matchPackageNames": [
-        "org.grails:grails-bom",
-        "org.grails:grails-bootstrap",
-        "org.grails:grails-codecs",
-        "org.grails:grails-console",
-        "org.grails:grails-core",
-        "org.grails:grails-databinding",
-        "org.grails:grails-dependencies",
-        "org.grails:grails-docs",
-        "org.grails:grails-encoder",
-        "org.grails:grails-gradle-model",
-        "org.grails:grails-logging",
-        "org.grails:grails-plugin-codecs",
-        "org.grails:grails-plugin-controllers",
-        "org.grails:grails-plugin-databinding",
-        "org.grails:grails-plugin-datasource",
-        "org.grails:grails-plugin-domain-class",
-        "org.grails:grails-plugin-i18n",
-        "org.grails:grails-plugin-interceptors",
-        "org.grails:grails-plugin-mimetypes",
-        "org.grails:grails-plugin-rest",
-        "org.grails:grails-plugin-services",
-        "org.grails:grails-plugin-url-mappings",
-        "org.grails:grails-plugin-url-validation",
-        "org.grails:grails-shell",
-        "org.grails:grails-spring",
-        "org.grails:grails-test",
-        "org.grails:grails-validation",
-        "org.grails:grails-web",
-        "org.grails:grails-web-boot",
-        "org.grails:grails-web-common",
-        "org.grails:grails-web-databinding",
-        "org.grails:grails-web-fileupload",
-        "org.grails:grails-web-mvc",
-        "org.grails:grails-web-url-mappings"
+        "org.graceframework:grace-bom",
+        "org.graceframework:grace-bootstrap",
+        "org.graceframework:grace-codecs",
+        "org.graceframework:grace-console",
+        "org.graceframework:grace-core",
+        "org.graceframework:grace-databinding",
+        "org.graceframework:grace-dependencies",
+        "org.graceframework:grace-docs",
+        "org.graceframework:grace-encoder",
+        "org.graceframework:grace-gradle-model",
+        "org.graceframework:grace-logging",
+        "org.graceframework:grace-plugin-codecs",
+        "org.graceframework:grace-plugin-controllers",
+        "org.graceframework:grace-plugin-databinding",
+        "org.graceframework:grace-plugin-datasource",
+        "org.graceframework:grace-plugin-domain-class",
+        "org.graceframework:grace-plugin-i18n",
+        "org.graceframework:grace-plugin-interceptors",
+        "org.graceframework:grace-plugin-mimetypes",
+        "org.graceframework:grace-plugin-rest",
+        "org.graceframework:grace-plugin-services",
+        "org.graceframework:grace-plugin-url-mappings",
+        "org.graceframework:grace-plugin-url-validation",
+        "org.graceframework:grace-shell",
+        "org.graceframework:grace-spring",
+        "org.graceframework:grace-test",
+        "org.graceframework:grace-validation",
+        "org.graceframework:grace-web",
+        "org.graceframework:grace-web-boot",
+        "org.graceframework:grace-web-common",
+        "org.graceframework:grace-web-databinding",
+        "org.graceframework:grace-web-fileupload",
+        "org.graceframework:grace-web-mvc",
+        "org.graceframework:grace-web-url-mappings"
       ],
-      "groupName": "grails monorepo"
+      "groupName": "grace monorepo"
     }
   ]
 }
