--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 title=Grace Data
 projectDesc=Grace Data Access Framework
 projectUrl=https://graceframework.org/
-projectVersion=2022.2.5
+projectVersion=2022.2.6-SNAPSHOT
 githubSlug=graceframework/grace-data
 developers=Michael Yan
 caffeineVersion=2.9.3
