Upgrade to Grace Async 6.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ developers=Michael Yan
 caffeineVersion=3.1.6
 commonsValidatorVersion=1.7
 elVersion=4.0.0
-graceAsyncVersion=6.0.0-RC1
+graceAsyncVersion=6.0.0
 graceVersion=2023.0.0-RC2
 groovyVersion=4.0.22
 h2Version=2.1.214
