--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 title=Grace Data
 projectDesc=Grace Data Access Framework
 projectUrl=https://github.com/graceframework/grace-data
-projectVersion=2023.0.1-SNAPSHOT
+projectVersion=2023.0.1
 githubSlug=graceframework/grace-data
 developers=Michael Yan
 caffeineVersion=3.1.8
