Upgrade to Grace Async 6.1.0-M1

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ developers=Michael Yan
 caffeineVersion=3.1.8
 commonsValidatorVersion=1.9.0
 elVersion=4.0.0
-graceAsyncVersion=6.0.1
+graceAsyncVersion=6.1.0-M1
 graceVersion=2023.0.2
 groovyVersion=4.0.23
 h2Version=2.1.214
