--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ caffeineVersion=3.1.8
 commonsValidatorVersion=1.9.0
 elVersion=4.0.0
 graceAsyncVersion=6.1.0-M1
-graceVersion=2023.0.2
+graceVersion=2023.1.0-M1
 groovyVersion=4.0.23
 h2Version=2.1.214
 hibernateValidatorVersion=8.0.1.Final
