--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ developers=Michael Yan
 caffeineVersion=3.1.8
 commonsValidatorVersion=1.9.0
 elVersion=4.0.0
-graceAsyncVersion=6.1.0-M3
+graceAsyncVersion=6.1.0-RC1
 graceVersion=2023.1.0-M3
 groovyVersion=4.0.23
 h2Version=2.1.214
