Upgrade to Grace 2023.1.0
Closes gh-17

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ caffeineVersion=3.1.8
 commonsValidatorVersion=1.9.0
 elVersion=4.0.0
 graceAsyncVersion=6.1.0
-graceVersion=2023.1.0-RC1
+graceVersion=2023.1.0
 groovyVersion=4.0.24
 h2Version=2.1.214
 hibernateValidatorVersion=8.0.1.Final
