--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ developers=Michael Yan
 caffeineVersion=3.1.8
 commonsValidatorVersion=1.9.0
 elVersion=4.0.0
-graceAsyncVersion=6.1.0
+graceAsyncVersion=6.2.0-M1
 graceVersion=2023.2.0-M1
 groovyVersion=4.0.24
 h2Version=2.1.214
